--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,11 @@
 {
     "compilerOptions": {
-      "target": "es2017",
+      "target": "es2016",
       "module": "commonjs",
       "outDir": "dist",
+      "esModuleInterop": true,
+      "forceConsistentCasingInFileNames": true,
+      "strict": true,
       "sourceMap": true,
     },
     "include": [
