--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
     "name": "ts-interface-to-json-schema",
     "version": "1.0.0",
     "description": "",
-    "main": "src/index.ts",
-    "type": "module",
+    "main": "dist/index.js",
+    "types": "types.d.ts",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "build": "tsc"
